--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalParametroCascada.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalParametroCascada.razor
@@ -17,17 +17,17 @@
             <CascadingValue Value="inx" Name="Indice">
             @if (inx == 1)
             {
-                    <MiModalParametroCascada ValorEditadoChanged="@ActualizarDato1" Ultimo=false />
+                    <MiModalParametroCascada ValorEditadoChanged="@ActualizarDato1"  />
             }
 
             @if (inx == 2)
             {
-                    <MiModalParametroCascada ValorEditadoChanged="@ActualizarDato2" Ultimo=false />
+                    <MiModalParametroCascada ValorEditadoChanged="@ActualizarDato2"  />
             }
 
             @if (inx == 3)
             {
-                    <MiModalParametroCascada ValorEditadoChanged="@ActualizarDato3" Ultimo=true />
+                    <MiModalParametroCascada ValorEditadoChanged="@ActualizarDato3"  />
             }
 
             </CascadingValue>
