--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Components/MiModalParametro.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Components/MiModalParametro.razor
@@ -19,5 +19,5 @@
 
 @code {
     [Parameter] public string ValorAMostrar { get; set; }
-    [Parameter] public EventCallback OnCerrar { get; set; }
+    [Parameter] public Action OnCerrar { get; set; }
 }
