--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalParametroCascada.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalParametroCascada.razor
@@ -44,6 +44,7 @@
     ClaseDato dato = new ClaseDato();
     bool modalVisible = false;
     int inx = 0;
+    ClaseDato datoModificado = new ClaseDato();
 
     protected override void OnInitialized()
     {
