--- a/Multitenancy/TenantControls/ContactList.razor
+++ b/Multitenancy/TenantControls/ContactList.razor
@@ -19,7 +19,7 @@ else
             {
                 <li>
                     @contact.Name
-                    @if (contact.TenanId==1)
+                    @if (contact.TenantId==1)
                     {
                         <span>&nbsp;🦄</span>
                     }
