--- a/BlazorEbi9EF/BlazorEbi9.Server/Shared/NavMenu.razor
+++ b/BlazorEbi9EF/BlazorEbi9.Server/Shared/NavMenu.razor
@@ -21,6 +21,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Lista Usuarios
             </NavLink>
         </li>
+        <nav class="flex-column">
+            <div class="nav-item px-3">
+                <TenantPicker />
+            </div>
+        </nav>
     </ul>
 </div>
 
