--- a/BlazorAppEFTenant/BlazorAppEFTenant/Components/Componentes_Paginas/ListaUsuariosContext.razor
+++ b/BlazorAppEFTenant/BlazorAppEFTenant/Components/Componentes_Paginas/ListaUsuariosContext.razor
@@ -4,6 +4,7 @@
 @using Microsoft.EntityFrameworkCore
 @inject IUnitOfWorkFactory UnitOfWorkFactory
 @inject string Contexto
+@inject ITenantProvider tenant
 
 <h3>Listado de usuarios (Genérico)</h3>
 
@@ -22,7 +23,7 @@ else
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
-                <th>Email</th>
+                <th>TenantId</th>
             </tr>
         </thead>
         <tbody>
@@ -31,7 +32,7 @@ else
                 <tr>
                     <td>@usuario.Id</td>
                     <td>@usuario.UserName</td>
-                    <td>@usuario.email</td>
+                    <td>@usuario.TenantId</td>
                 </tr>
             }
         </tbody>
@@ -45,6 +46,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        tenant.SetTenant(2);
         uow = UnitOfWorkFactory.Create(Contexto);
 
         var usuarioRepo = uow.GetRepository<Usuario>();
